apply changes from master

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,3 +14,6 @@ org.gradle.jvmargs=-Xmx4G
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 org.gradle.caching=true
+kotlinVersion=1.5.31
+kotlinLanguageLevel=1.5
+# jvmTarget=1.8
